Update design card component

--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -3,8 +3,8 @@ nav.navbar {
   position: fixed;
   width: 100%;
   padding: 1.5rem 0;
-  -webkit-animation: fadeIn 1s ease-out;
-          animation: fadeIn 1s ease-out;
+  -webkit-animation: fadeIn 2s ease-out;
+          animation: fadeIn 2s ease-out;
 }
 
 nav.navbar .container {
@@ -158,8 +158,8 @@ section.about .container {
 }
 
 section.about .container .left-col {
-  width: 40rem;
-  margin-top: 23rem;
+  width: 48rem;
+  margin-top: 25rem;
 }
 
 section.about .container .left-col .text-container {
@@ -169,18 +169,18 @@ section.about .container .left-col .text-container {
 
 section.about .container .left-col .text-container h2 {
   font-family: 'Inter', 'Poppins', sans-serif;
-  font-size: clamp(1.5rem, 5vw, 3rem);
+  font-size: clamp(1.5rem, 5vw, 3.4rem);
   font-weight: bold;
   color: #f0f0f0;
 }
 
 section.about .container .left-col .text-container p {
   font-family: 'Inter', 'Poppins', sans-serif;
-  font-size: clamp(1.5rem, 5vw, 2rem);
+  font-size: clamp(1.5rem, 5vw, 1.8rem);
   font-weight: normal;
-  color: #ffffff;
-  margin-top: 2rem;
-  margin-left: 0.1rem;
+  color: #e9e9e9;
+  margin-top: 2.1rem;
+  margin-left: 0.2rem;
 }
 
 section.projects .container {
@@ -218,9 +218,10 @@ section.projects .container .left-col .card-grid {
 }
 
 section.projects .container .left-col .card-grid .card {
-  background: #06111d;
-  -webkit-box-shadow: 0.2rem 0.2rem 1rem rgba(0, 0, 0, 0.3);
-          box-shadow: 0.2rem 0.2rem 1rem rgba(0, 0, 0, 0.3);
+  background: black;
+  background: linear-gradient(10deg, rgba(8, 20, 36, 0.562) 20%, rgba(30, 35, 78, 0.541) 40%, rgba(43, 48, 61, 0.048) 100%);
+  -webkit-box-shadow: 0.3rem 0.3rem 1rem rgba(0, 0, 0, 0.5);
+          box-shadow: 0.3rem 0.3rem 1rem rgba(0, 0, 0, 0.5);
   width: 22rem;
   border-radius: 0.5rem;
   margin-top: 2.5rem;
@@ -375,3 +376,4 @@ section.contact .container .left-col .form-container .flex .link-container a i {
   color: #ffffff;
   font-size: clamp(2rem, 5vw, 4rem);
 }
+/*# sourceMappingURL=body.css.map */
