--- a/assets/css/body.scss
+++ b/assets/css/body.scss
@@ -126,23 +126,23 @@ section.about {
   .container {
     max-width: 80rem;
     .left-col {
-      width: 40rem;
-      margin-top: 23rem;
+      width: 48rem;
+      margin-top: 25rem;
       .text-container {
         animation: swipeFromTop 1.5s ease-out;
         h2 {
           font-family: 'Inter', 'Poppins', sans-serif;
-          font-size: clamp(1.5rem, 5vw, 3rem);
+          font-size: clamp(1.5rem, 5vw, 3.4rem);
           font-weight: bold;
           color: #f0f0f0;
         }
         p {
           font-family: 'Inter', 'Poppins', sans-serif;
-          font-size: clamp(1.5rem, 5vw, 2rem);
+          font-size: clamp(1.5rem, 5vw, 1.8rem);
           font-weight: normal;
-          color: #ffffff;
-          margin-top: 2rem;
-          margin-left: 0.1rem;
+          color: #e9e9e9;
+          margin-top: 2.1rem;
+          margin-left: 0.2rem;
         }
       }
     }
@@ -169,8 +169,9 @@ section.projects {
         flex-direction: row;
         flex-wrap: wrap;
         .card {
-          background: #06111d;
-          box-shadow: 0.2rem 0.2rem 1rem rgba(0, 0, 0, 0.3);
+          background: rgb(0,0,0);
+          background: linear-gradient(10deg, rgba(8, 20, 36, 0.562) 20%, rgba(30, 35, 78, 0.541) 40%, rgba(43, 48, 61, 0.048) 100%);
+          box-shadow: 0.3rem 0.3rem 1rem rgba(0, 0, 0, 0.5);
           width: 22rem;
           border-radius: 0.5rem;
           margin-top: 2.5rem;
