--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -218,10 +218,9 @@ section.projects .container .left-col .card-grid {
 }
 
 section.projects .container .left-col .card-grid .card {
-  background: black;
-  background: linear-gradient(10deg, rgba(8, 20, 36, 0.562) 20%, rgba(30, 35, 78, 0.541) 40%, rgba(43, 48, 61, 0.048) 100%);
+  background: rgb(25, 28, 37);
   -webkit-box-shadow: 0.3rem 0.3rem 1rem rgba(0, 0, 0, 0.5);
-          box-shadow: 0.3rem 0.3rem 1rem rgba(0, 0, 0, 0.5);
+          box-shadow: 0.3rem 0.3rem 1rem rgba(0, 0, 0, 0.3);
   width: 22rem;
   border-radius: 0.5rem;
   margin-top: 2.5rem;
