--- a/assets/css/body.scss
+++ b/assets/css/body.scss
@@ -169,8 +169,7 @@ section.projects {
         flex-direction: row;
         flex-wrap: wrap;
         .card {
-          background: rgb(0,0,0);
-          background: linear-gradient(10deg, rgba(8, 20, 36, 0.562) 20%, rgba(30, 35, 78, 0.541) 40%, rgba(43, 48, 61, 0.048) 100%);
+          background: rgb(25, 28, 37);
           box-shadow: 0.3rem 0.3rem 1rem rgba(0, 0, 0, 0.5);
           width: 22rem;
           border-radius: 0.5rem;
