--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,31 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 body {
-  font-family: 'Poppins', sans-serif;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.1)),
-    url(/assets/images/body.jpg);
+  font-family: 'Inter', sans-serif;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.1)), url(/assets/images/body.jpg);
   background-size: cover;
-  overflow-x: hidden;
 }
 
 html {
   scroll-behavior: smooth;
 }
 
-* {
-  margin: 0;
-  -webkit-box-sizing: border-box;
+* { /* All elements */
   box-sizing: border-box;
-  text-rendering: optimizeLegibility;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
   text-decoration: none;
 }
 
 .container {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   margin: 0 auto;
   padding: 0 2rem;
-  flex-wrap: wrap;
 }
 
 @media screen and (max-width: 768px) {
@@ -35,7 +33,7 @@ html {
   }
 
   section.home .container .left-col .text-container p {
-    font-size: clamp(.9rem, 5vw, 0.8rem) !important;
+    font-size: clamp(0.9rem, 5vw, 0.8rem) !important;
   }
 
   section.home .container .left-col .btn-container a {
@@ -73,7 +71,7 @@ html {
   }
 
   section.projects .container .left-col .card-grid .card .card-text-container p {
-    font-size: clamp(.9rem, 5vw, 0.8rem) !important;
+    font-size: clamp(0.9rem, 5vw, 0.8rem) !important;
   }
 
   section.projects .container .left-col .card-grid .card .card-btn-container {
@@ -95,7 +93,6 @@ html {
 
   section.contact .container .left-col .form-container .flex .input-container input[type='submit'] {
     padding: 0.4rem 0.6rem !important;
-
   }
 
   nav.navbar .container .nav-link {
@@ -139,7 +136,6 @@ html {
   }
 }
 
-
 @keyframes swipeFromLeft {
   from {
     transform: translateX(-60rem);
@@ -149,7 +145,6 @@ html {
   to {
     transform: translateX(0);
     opacity: 1;
-
   }
 }
 
